2000-05-24  Andreas Jaeger  <aj@suse.de>

	* intl/Makefile: Run gettext-test only if msgfmt is available.

2000-05-23  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-sym.c: Minor cleanups.

	* configure.in: Add test for .protected.
	* config.make.in: Add have-protected variable.
	* elf/Makefile (tests): Add $(tests-vis-$(have-protected)).
	(tests-vis-yes): Add vismain.
	(modules-names): Add $(modules-vis-$(have-protected)).
	(modules-vis-yes): Add vismod1, vismod2, and vismod3.
	Add rules to generate and run vismain.
	* elf/vismain.c: New file.
	* elf/vismod1.c: New file.
	* elf/vismod2.c: New file.
	* elf/vismod3.c: New file.

2000-05-23  Andreas Jaeger  <aj@suse.de>

	* stdio-common/tfformat.c (sprint_doubles): Add testcase for %a.

	* manual/search.texi (Array Sort Function): Document that qsort is
	not necessarily in-place.

	* sunrpc/rpc_main.c (parseargs): Don't accept -M and -N.
	Closes PR libc/1731.

	* csu/munch-tmpl.c (__libc_init): Remove K&R support.
	* dirent/scandir64.c: Likewise.
	* pwd/getpw.c: Likewise.
	* stdlib/bsearch.c (bsearch): Likewise.
	* stdlib/tst-strtoll.c: Likewise.
	* localedata/collate-test.c: Likewise.
	* localedata/xfrm-test.c: Likewise.
	* posix/bsd-getpgrp.c: Likewise.
	* sysdeps/alpha/fpu/bits/fenv.h: Likewise.
	* sysdeps/generic/bits/siginfo.h: Likewise.
	* sysdeps/generic/bits/sockaddr.h: Likewise.
	* sysdeps/generic/sys/swap.h: Likewise.
	* sysdeps/generic/sys/sysinfo.h: Likewise.
	* sysdeps/generic/vfork.c: Likewise.
	* sysdeps/m68k/fpu/switch/68881-sw.h: Likewise.
	* sysdeps/mach/hurd/fdopen.c: Likewise.
	* sysdeps/unix/sysv/linux/alpha/sys/acct.h: Likewise.
	* sysdeps/unix/sysv/linux/poll.c: Likewise.
	* sysdeps/unix/sysv/linux/readv.c: Likewise.
	* sysdeps/unix/sysv/linux/writev.c: Likewise.
	* sysdeps/unix/sysv/linux/i386/setgroups.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/ipc.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/sigaction.h: Likewise.
